--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
 	"dependencies": {
 		"@fontsource-variable/urbanist": "^5.0.21",
 		"@prismicio/client": "^7.6.0",
-		"@prismicio/svelte": "^1.2.0"
+		"@prismicio/svelte": "^1.2.0",
+		"@threlte/core": "^7.3.1",
+		"@threlte/extras": "^8.11.4",
+		"three": "^0.166.1"
 	}
 }
